--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,13 +1,10 @@
 .main {
   margin: 0 1rem;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .search {
   width: 40rem;
   text-align: center;
-  padding-bottom: 20rem;
+  margin: 0 auto;
+  margin-top: 15rem;
 }
