--- a/src/components/dark.module.css
+++ b/src/components/dark.module.css
@@ -1,9 +1,10 @@
 .markdown-body {
+  color-scheme: dark;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: #24292f;
-  background-color: #ffffff;
+  color: #c9d1d9;
+  background-color: #141414;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
   font-size: 16px;
   line-height: 1.5;
@@ -47,7 +48,7 @@
 
 .markdown-body a {
   background-color: transparent;
-  color: #0969da;
+  color: #58a6ff;
   text-decoration: none;
 }
 
@@ -70,12 +71,12 @@
   font-weight: 600;
   padding-bottom: .3em;
   font-size: 2em;
-  border-bottom: 1px solid hsla(210,18%,87%,1);
+  border-bottom: 1px solid #21262d;
 }
 
 .markdown-body mark {
-  background-color: #fff8c5;
-  color: #24292f;
+  background-color: rgba(187,128,9,0.15);
+  color: #c9d1d9;
 }
 
 .markdown-body small {
@@ -102,7 +103,7 @@
   border-style: none;
   max-width: 100%;
   box-sizing: content-box;
-  background-color: #ffffff;
+  background-color: #0d1117;
 }
 
 .markdown-body code,
@@ -121,11 +122,11 @@
   box-sizing: content-box;
   overflow: hidden;
   background: transparent;
-  border-bottom: 1px solid hsla(210,18%,87%,1);
+  border-bottom: 1px solid #21262d;
   height: .25em;
   padding: 0;
   margin: 24px 0;
-  background-color: #d0d7de;
+  background-color: #30363d;
   border: 0;
 }
 
@@ -175,7 +176,7 @@
 }
 
 .markdown-body ::placeholder {
-  color: #6e7781;
+  color: #6e7681;
   opacity: 1;
 }
 
@@ -216,7 +217,7 @@
 .markdown-body [role=button]:focus,
 .markdown-body input[type=radio]:focus,
 .markdown-body input[type=checkbox]:focus {
-  outline: 2px solid #0969da;
+  outline: 2px solid #58a6ff;
   outline-offset: -2px;
   box-shadow: none;
 }
@@ -232,7 +233,7 @@
 .markdown-body [role=button]:focus-visible,
 .markdown-body input[type=radio]:focus-visible,
 .markdown-body input[type=checkbox]:focus-visible {
-  outline: 2px solid #0969da;
+  outline: 2px solid #58a6ff;
   outline-offset: -2px;
   box-shadow: none;
 }
@@ -251,13 +252,13 @@
   padding: 3px 5px;
   font: 11px ui-monospace,SFMono-Regular,SF Mono,Menlo,Consolas,Liberation Mono,monospace;
   line-height: 10px;
-  color: #24292f;
+  color: #c9d1d9;
   vertical-align: middle;
-  background-color: #f6f8fa;
-  border: solid 1px rgba(175,184,193,0.2);
-  border-bottom-color: rgba(175,184,193,0.2);
+  background-color: #161b22;
+  border: solid 1px rgba(110,118,129,0.4);
+  border-bottom-color: rgba(110,118,129,0.4);
   border-radius: 6px;
-  box-shadow: inset 0 -1px 0 rgba(175,184,193,0.2);
+  box-shadow: inset 0 -1px 0 rgba(110,118,129,0.4);
 }
 
 .markdown-body h1,
@@ -276,7 +277,7 @@
   font-weight: 600;
   padding-bottom: .3em;
   font-size: 1.5em;
-  border-bottom: 1px solid hsla(210,18%,87%,1);
+  border-bottom: 1px solid #21262d;
 }
 
 .markdown-body h3 {
@@ -297,7 +298,7 @@
 .markdown-body h6 {
   font-weight: 600;
   font-size: .85em;
-  color: #57606a;
+  color: #8b949e;
 }
 
 .markdown-body p {
@@ -308,8 +309,8 @@
 .markdown-body blockquote {
   margin: 0;
   padding: 0 1em;
-  color: #57606a;
-  border-left: .25em solid #d0d7de;
+  color: #8b949e;
+  border-left: .25em solid #30363d;
 }
 
 .markdown-body ul,
@@ -389,7 +390,7 @@
 }
 
 .markdown-body .absent {
-  color: #cf222e;
+  color: #f85149;
 }
 
 .markdown-body .anchor {
@@ -429,7 +430,7 @@
 .markdown-body h4 .octicon-link,
 .markdown-body h5 .octicon-link,
 .markdown-body h6 .octicon-link {
-  color: #24292f;
+  color: #c9d1d9;
   vertical-align: middle;
   visibility: hidden;
 }
@@ -562,16 +563,16 @@
 .markdown-body table th,
 .markdown-body table td {
   padding: 6px 13px;
-  border: 1px solid #d0d7de;
+  border: 1px solid #30363d;
 }
 
 .markdown-body table tr {
-  background-color: #ffffff;
-  border-top: 1px solid hsla(210,18%,87%,1);
+  background-color: #0d1117;
+  border-top: 1px solid #21262d;
 }
 
 .markdown-body table tr:nth-child(2n) {
-  background-color: #f6f8fa;
+  background-color: #161b22;
 }
 
 .markdown-body table img {
@@ -604,7 +605,7 @@
   padding: 7px;
   margin: 13px 0 0;
   overflow: hidden;
-  border: 1px solid #d0d7de;
+  border: 1px solid #30363d;
 }
 
 .markdown-body span.frame span img {
@@ -616,7 +617,7 @@
   display: block;
   padding: 5px 0 0;
   clear: both;
-  color: #24292f;
+  color: #c9d1d9;
 }
 
 .markdown-body span.align-center {
@@ -686,7 +687,7 @@
   margin: 0;
   font-size: 85%;
   white-space: break-spaces;
-  background-color: rgba(175,184,193,0.2);
+  background-color: rgba(110,118,129,0.4);
   border-radius: 6px;
 }
 
@@ -731,7 +732,7 @@
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
-  background-color: #f6f8fa;
+  background-color: #161b22;
   border-radius: 6px;
 }
 
@@ -761,7 +762,7 @@
 .markdown-body .csv-data .blob-num {
   padding: 10px 8px 9px;
   text-align: right;
-  background: #ffffff;
+  background: #0d1117;
   border: 0;
 }
 
@@ -771,7 +772,7 @@
 
 .markdown-body .csv-data th {
   font-weight: 600;
-  background: #f6f8fa;
+  background: #161b22;
   border-top: 0;
 }
 
@@ -785,8 +786,8 @@
 
 .markdown-body .footnotes {
   font-size: 12px;
-  color: #57606a;
-  border-top: 1px solid #d0d7de;
+  color: #8b949e;
+  border-top: 1px solid #30363d;
 }
 
 .markdown-body .footnotes ol {
@@ -811,12 +812,12 @@
   left: -24px;
   pointer-events: none;
   content: "";
-  border: 2px solid #0969da;
+  border: 2px solid #1f6feb;
   border-radius: 6px;
 }
 
 .markdown-body .footnotes li:target {
-  color: #24292f;
+  color: #c9d1d9;
 }
 
 .markdown-body .footnotes .data-footnote-backref g-emoji {
@@ -824,30 +825,30 @@
 }
 
 .markdown-body .pl-c {
-  color: #6e7781;
+  color: #8b949e;
 }
 
 .markdown-body .pl-c1,
 .markdown-body .pl-s .pl-v {
-  color: #0550ae;
+  color: #79c0ff;
 }
 
 .markdown-body .pl-e,
 .markdown-body .pl-en {
-  color: #8250df;
+  color: #d2a8ff;
 }
 
 .markdown-body .pl-smi,
 .markdown-body .pl-s .pl-s1 {
-  color: #24292f;
+  color: #c9d1d9;
 }
 
 .markdown-body .pl-ent {
-  color: #116329;
+  color: #7ee787;
 }
 
 .markdown-body .pl-k {
-  color: #cf222e;
+  color: #ff7b72;
 }
 
 .markdown-body .pl-s,
@@ -857,90 +858,90 @@
 .markdown-body .pl-sr .pl-cce,
 .markdown-body .pl-sr .pl-sre,
 .markdown-body .pl-sr .pl-sra {
-  color: #0a3069;
+  color: #a5d6ff;
 }
 
 .markdown-body .pl-v,
 .markdown-body .pl-smw {
-  color: #953800;
+  color: #ffa657;
 }
 
 .markdown-body .pl-bu {
-  color: #82071e;
+  color: #f85149;
 }
 
 .markdown-body .pl-ii {
-  color: #f6f8fa;
-  background-color: #82071e;
+  color: #f0f6fc;
+  background-color: #8e1519;
 }
 
 .markdown-body .pl-c2 {
-  color: #f6f8fa;
-  background-color: #cf222e;
+  color: #f0f6fc;
+  background-color: #b62324;
 }
 
 .markdown-body .pl-sr .pl-cce {
   font-weight: bold;
-  color: #116329;
+  color: #7ee787;
 }
 
 .markdown-body .pl-ml {
-  color: #3b2300;
+  color: #f2cc60;
 }
 
 .markdown-body .pl-mh,
 .markdown-body .pl-mh .pl-en,
 .markdown-body .pl-ms {
   font-weight: bold;
-  color: #0550ae;
+  color: #1f6feb;
 }
 
 .markdown-body .pl-mi {
   font-style: italic;
-  color: #24292f;
+  color: #c9d1d9;
 }
 
 .markdown-body .pl-mb {
   font-weight: bold;
-  color: #24292f;
+  color: #c9d1d9;
 }
 
 .markdown-body .pl-md {
-  color: #82071e;
-  background-color: #ffebe9;
+  color: #ffdcd7;
+  background-color: #67060c;
 }
 
 .markdown-body .pl-mi1 {
-  color: #116329;
-  background-color: #dafbe1;
+  color: #aff5b4;
+  background-color: #033a16;
 }
 
 .markdown-body .pl-mc {
-  color: #953800;
-  background-color: #ffd8b5;
+  color: #ffdfb6;
+  background-color: #5a1e02;
 }
 
 .markdown-body .pl-mi2 {
-  color: #eaeef2;
-  background-color: #0550ae;
+  color: #c9d1d9;
+  background-color: #1158c7;
 }
 
 .markdown-body .pl-mdr {
   font-weight: bold;
-  color: #8250df;
+  color: #d2a8ff;
 }
 
 .markdown-body .pl-ba {
-  color: #57606a;
+  color: #8b949e;
 }
 
 .markdown-body .pl-sg {
-  color: #8c959f;
+  color: #484f58;
 }
 
 .markdown-body .pl-corl {
   text-decoration: underline;
-  color: #0a3069;
+  color: #a5d6ff;
 }
 
 .markdown-body g-emoji {
