feat: update landing page copy

--- a/src/pages/page.module.css
+++ b/src/pages/page.module.css
@@ -1,10 +1,11 @@
 .search {
-  width: 40rem;
+  width: 760px;
   text-align: center;
   margin: 0 auto;
-  margin-top: 15rem;
+  margin-top: 16px;
 }
 
 .main {
   min-height: calc(100vh - 32px);
+  margin-bottom: 32px;
 }
