fix: enahcne recent

--- a/src/slugs/home/home.module.css
+++ b/src/slugs/home/home.module.css
@@ -6,11 +6,8 @@
 }
 
 .tagCon {
-  display: inline-flex;
-  flex-wrap: wrap;
+  width: 100%;
   padding: 0;
-  list-style: none;
-  row-gap: 8px;
 }
 
 .tagItem {
